--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "rxjs": "~6.5.4",
